Set the dragged window as active window on window drag ended.

changes in this cl,
- Added overview exit type kWindowDragged for ending overview on window
  drag.
- Set the dragged window as active window on window drag ended, this will
  make sure the dragged window will not lost its activation on overview
  ended.
- Update the non-dragged windows' bounds at the end of animation. Since
  we want no animation if overview ends on window drag, including the
  update bounds animation. Set the animation type to ZERO for all the
  other windows except the dragged window. Then we can only see the update
  bounds animation of the dragged window. All the other windows' bounds
  will be updated at the end of the animation, which can not be seen by
  users.

Bug: 883579
Change-Id: I6a523e6be7caf32757299462cdf6197574768be2
Reviewed-on: https://chromium-review.googlesource.com/1232957
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593715}
Former-commit-id: 0b1fc9b7853b0f7521da3a1e22393e3d9bde3bb9