ash/wm/tablet_mode/tablet_mode_window_manager.h
@@ -60,6 +60,7 @@ class ASH_EXPORT TabletModeWindowManager
 
   // ShellObserver:
   void OnOverviewModeStarting() override;
+  void OnOverviewModeEnding() override;
   void OnOverviewModeEnded() override;
   void OnSplitViewModeEnded() override;
 
@@ -146,6 +147,9 @@ class ASH_EXPORT TabletModeWindowManager
   std::unordered_set<aura::Window*> added_windows_;
 
   std::unique_ptr<wm::TabletModeEventHandler> event_handler_;
+
+  // True if overview exit type is |kWindowDragged|.
+  bool exit_overview_by_window_drag_ = false;
 
   DISALLOW_COPY_AND_ASSIGN(TabletModeWindowManager);
 };
